<resources>
    <string name="app_name">Zapfun Food Ordering Application</string>
    <string name="lblDeliveryLocation">"Location: "</string>
    <string name="DeliveryLocation">"Current Location"</string>
    <string name="HistoryTitle">"My History"</string>
    <string name="OrderSummaryTitle">Order Summary</string>
    <string name="RiceQuantity">Rice Quantity : </string>
    <string name="MyOrderLabel">My Orders</string>
    <string name="MyOrderEditLabel">Edit</string>
    <string name="ConfirmQuantity">0</string>
    <string name="LocationAddress">Current Location</string>
    <string name="img_description">This is an image</string>
    <string name="AddToCart">SELECT 2 OR MORE DISHES</string>

    <string name="today_special">TODAY SPECIAL</string>
    <string name="dishes">DISHES</string>
    <string name="chicken">CHICKEN</string>
    <string name="pork">PORK</string>
    <string name="fish">FISH</string>
    <string name="vegeEgg">VEGETABLE &amp; EGG</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="backarrow">back arrow</string>
    <string name="emailaddress">Email Address:</string>
    <string name="phonenumber">Phone Number:</string>
    <string name="newpassword">New Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="changepassword">Change Password</string>
    <string name="registeraccount">Register Account</string>
    <string name="fname">First Name:</string>
    <string name="lname">Last Name:</string>
    <string name="password">Password:</string>
    <string name="deliveryaddress">Delivery Address:</string>
    <string name="floorunit">Floor/Unit</string>
    <string name="address">Address</string>
    <string name="termncondition"><![CDATA[I have read and agree to the Term & Condition]]></string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="loginQ">Have an account? Login here!</string>
    <string name="login">Login</string>
    <string name="checkrobot">Please check the box below to proceed.</string>
    <string name="checkboxrobot">I am not a robot</string>
    <string name="rememberme">Remember Me</string>
    <string name="noaccount">Don\'t have an account? Sign up here!</string>
    <string name="locationname">Location Name:</string>
    <string name="recipiantname">Recipient Name:</string>
    <string name="remark">Remark</string>
    <string name="setdefault">Set as default delivery address?</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="myaddress">My Address</string>
    <string name="delete">delete</string>
    <string name="home">home</string>
    <string name="aboutus">About Us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="datapolicy">Data Policy</string>
    <string name="contactus">Contact Us</string>
    <string name="realaddress">Jalan 3/3d, Jalan Danou Kota 12, 53000 Kuala Lumpur, Wilayah Kuala Lumpur</string>
    <string name="phone">+60169631563</string>
    <string name="realemail">zapfun@gmail.com</string>
    <string name="operatinghour">Operating Hours</string>
    <string name="monday2friday">Monday to Friday</string>
    <string name="time">11a.m. to 7p.m.</string>
    <string name="helpcentre">Help Centre</string>
    <string name="question">How can we help?</string>
    <string name="faq">FAQ</string>
    <string name="makingpayment">Making Payment</string>
    <string name="myaccount">My Account</string>
    <string name="myprofile">My Profile</string>
    <string name="contactinfo">Contact Info</string>
    <string name="currentpassword">Current Password</string>
    <string name="npassword">New Password</string>
    <string name="cpassword">Confirm Password</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="phoneno">Phone number</string>
    <string name="email">Email Address</string>
    <string name="profile_name" />
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="resetpassword">Reset Password</string>
    <string name="enteremail">Enter your email address to reset password</string>
    <string name="aboutusinfo">At ZapFun we strive to bring youthe unbeatable variety and affordability of economy rice combined with the unparalleled convenience of online delivery. In just a matter of minutes, your order will be sent to our kitchen, prepared and sent to your nearest pickup location.</string>
    <string name="Home">Home</string>
    <string name="recipient" />
    <string name="recipientname">Recipient Name</string>
    <string name="phoneNo">Phone Number</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="foodname">FoodName</string>
</resources>