<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUsFragment" >

    <TextView
        android:id="@+id/textView54"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="266dp"
        android:layout_marginBottom="377dp"
        android:text="@string/address"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="264dp"
        android:text="@string/phone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="233dp"
        android:text="@string/realemail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="161dp"
        android:text="@string/operatinghour"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="132dp"
        android:text="@string/monday2friday"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="104dp"
        android:text="@string/time"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="297dp"
        android:text="@string/realaddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="272dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="682dp"
        android:text="@string/contactus"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="359dp"
        android:layout_marginBottom="685dp"
        android:contentDescription="@string/backarrow"
        android:src="@drawable/ic_back_arrow" />

    <View
        android:id="@+id/line12"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="678dp"
        android:background="#c0c0c0"
        tools:ignore="UnknownIdInLayout" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="408dp" />
</RelativeLayout>