<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".MyAddressActivity">


    <ImageView
        android:id="@+id/backbtn_myaddress"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/backarrow"
        android:src="@drawable/ic_back_arrow" />

    <TextView
        android:id="@+id/lblMyAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/backbtn_myaddress"
        android:text="@string/myaddress"
        android:textSize="24sp" />

    <View
        android:id="@+id/line14"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/lblMyAddress"
        android:background="#c0c0c0"  />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:contentDescription="@string/home"
        android:src="@drawable/ic_baseline_home_24"
        android:paddingLeft="5dp"
        android:layout_below="@id/line14"/>

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView15"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@id/imageView15"
        android:paddingBottom="2dp"
        android:text="@string/Home"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/edit_address"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:contentDescription="@string/MyOrderEditLabel"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_alignEnd="@id/line14"
        android:paddingRight="10dp"
        android:layout_below="@id/line14"/>



    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipientname"
        android:layout_below="@id/imageView15"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        />

    <TextView
        android:id="@+id/recipientname"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_toEndOf="@id/textView62"
        android:layout_alignBottom="@id/textView62" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNo"
        android:layout_below="@id/textView62"
        android:paddingLeft="15dp"
        android:paddingTop="18dp"/>


    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_toEndOf="@id/textView63"
        android:layout_alignBottom="@id/textView63"
        android:layout_alignLeft="@+id/recipientname"/>


    <TextView
        android:id="@+id/textView109"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_below="@id/textView63"
        android:paddingLeft="15dp"
        android:paddingTop="18dp"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_toEndOf="@id/textView109"
        android:layout_alignBottom="@id/textView109"
        android:layout_alignLeft="@+id/recipientname"/>

    <TextView
        android:id="@+id/textView108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floorunit"
        android:layout_below="@id/address"
        android:paddingLeft="15dp"
        android:paddingTop="18dp"/>

    <TextView
        android:id="@+id/unitorfloor"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_toEndOf="@id/textView108"
        android:layout_alignBottom="@id/textView108"
        android:layout_alignLeft="@+id/recipientname"/>



</RelativeLayout>