<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment" >

    <TextView
        android:id="@+id/textView37"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="252dp"
        android:text="@string/or" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="159dp"
        android:text="@string/or" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="209dp"
        android:text="@string/noaccount" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="121dp"
        android:text="@string/ForgotPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="284dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editTextTextPersonName14"
        android:layout_width="307dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="517dp"
        android:autofillHints="@string/emailaddress"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="554dp"
        android:text="@string/password" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="274dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="463dp"
        android:text="@string/checkrobot" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="272dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="682dp"
        android:text="@string/login"
        android:textSize="24sp" />

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="678dp"
        android:background="#c0c0c0"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="631dp"
        android:text="@string/emailaddress" />

    <EditText
        android:id="@+id/editTextTextPersonName13"
        android:layout_width="307dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="595dp"
        android:autofillHints="@string/emailaddress"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="426dp"
        android:text="@string/checkboxrobot" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="361dp"
        android:text="@string/rememberme" />
</RelativeLayout>